--- a/src/main/resources/templates/mypage/volunteer-work-list.html
+++ b/src/main/resources/templates/mypage/volunteer-work-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>후원 내역</title>
+    <title>봉사 활동 내역</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/mypage/mypage-header.css">
@@ -56,12 +56,12 @@
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
-                                <a href="" class="header-menu-a">봉사활동 내역</a>
+                                <a href="" class="header-menu-a-select">봉사활동 내역</a>
                             </div>
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
-                                <a href="" class="header-menu-a-select">후원내역</a>
+                                <a href="" class="header-menu-a">후원내역</a>
                             </div>
                         </span>
                         <span class="header-menu-element">
@@ -89,7 +89,7 @@
                                     <div class="support-request-title">높이 올라가</div>
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">공양미 100석 후원</div>
+                                <div class="support-request-reply">강남구 요양원</div>
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
@@ -107,7 +107,7 @@
                                     <div class="support-request-title">높이 올라가</div>
                                 </div>
                                 <div class="support-request-content">세상을 다 가져봐</div>
-                                <div class="support-request-reply">공양미 100석 후원</div>
+                                <div class="support-request-reply">강남구 요양원</div>
                             </div>
                             <div class="support-request-detail">
                                 <button class="go-support-request">
