회원관리, 공지사항, 공양미 충전내역 완성

--- a/src/main/resources/static/css/admin/default.css
+++ b/src/main/resources/static/css/admin/default.css
@@ -310,5 +310,6 @@ section.modal-stage {
 
 section.trip-status{
   background-color: #ffffff;
-  min-width: 946px;
+  min-width: 948px;
+  box-shadow: 0 10px 10px rgb(48 52 65 / 10%);
 }
