--- a/src/main/resources/static/css/admin/notice-modal.css
+++ b/src/main/resources/static/css/admin/notice-modal.css
@@ -73,7 +73,7 @@
   display: flex;
   flex: 1;
   align-items: center;
-  padding: 12px 0;
+  padding: 10px 1px 2px;
   margin-left: 80px;
   font-size: 16px;
   text-align: left;
@@ -89,7 +89,7 @@
   outline: none;
   border: none;
   border-radius: 3px;
-  padding: 3px 12px ;
+  padding: 12px 12px;
 }
 
 .user__profile__input input:focus {
