--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/static/css/admin/content.css" />
   <link rel="stylesheet" href="/static/css/admin/status.css" />
   <link rel="stylesheet" href="/static/css/admin/user-modal.css" />
+  <link rel="stylesheet" href="/static/css/admin/paging.css">
 </head>
 
 <body>
@@ -173,7 +174,31 @@
               <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
             </svg>
           </a>
-           <!-- 공양미내역 -->
+          <!-- 펀딩 관리  -->
+          <a href="javascript:void(0)" class="sidebar__menu">
+            <div class="sidebar__menu__name">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
+                  <title />
+                  <g data-name="Camada 2" id="Camada_2">
+                    <g data-name="Camada 1" id="Camada_1-2">
+                      <path
+                        d="M18.2,12.81A5.77,5.77,0,0,0,17,12.44a6.47,6.47,0,0,1-.82-.25,1.07,1.07,0,0,1-.42-.27.55.55,0,0,1-.13-.38.57.57,0,0,1,.26-.51,1.29,1.29,0,0,1,.72-.18,1.27,1.27,0,0,1,.7.18.68.68,0,0,1,.33.45.24.24,0,0,0,.24.15h.79a.17.17,0,0,0,.18-.18,1.33,1.33,0,0,0-.22-.63,1.86,1.86,0,0,0-.59-.57,2.3,2.3,0,0,0-.93-.32V9.34a.19.19,0,0,0-.2-.2h-.52a.2.2,0,0,0-.14.05.19.19,0,0,0-.06.15v.58a2.19,2.19,0,0,0-1.29.55,1.46,1.46,0,0,0-.47,1.1,1.35,1.35,0,0,0,.46,1.1,3.54,3.54,0,0,0,1.44.62q.59.16.9.27a1.25,1.25,0,0,1,.46.26.51.51,0,0,1,.15.38.61.61,0,0,1-.3.54,1.58,1.58,0,0,1-.87.2,1.49,1.49,0,0,1-.81-.19.89.89,0,0,1-.39-.48.39.39,0,0,0-.1-.12.27.27,0,0,0-.15,0h-.75a.18.18,0,0,0-.13.05.17.17,0,0,0-.05.12,1.41,1.41,0,0,0,.24.72,1.75,1.75,0,0,0,.65.57,2.68,2.68,0,0,0,1,.29v.58a.19.19,0,0,0,.06.15.2.2,0,0,0,.14.05h.52a.19.19,0,0,0,.2-.2v-.58a2.48,2.48,0,0,0,1.41-.54,1.48,1.48,0,0,0,.52-1.18,1.45,1.45,0,0,0-.21-.81A1.54,1.54,0,0,0,18.2,12.81Z" />
+                      <path
+                        d="M16.67,6.24H14.12V3.67a.5.5,0,0,0-.5-.5H13V.5a.5.5,0,0,0-.5-.5H.5A.5.5,0,0,0,0,.5V3.57a.5.5,0,0,0,.5.5h.66V6.74a.5.5,0,0,0,.5.5h.5V9.32H.66a.5.5,0,0,0-.5.5V19a.5.5,0,0,0,.5.5h12a.5.5,0,0,0,.5-.5v-.51A6.66,6.66,0,1,0,16.67,6.24ZM1,1H12V3.07H1ZM2.16,4.17h11V6.24h-11Zm1,3.07h10a6.7,6.7,0,0,0-2.1,2.07H3.16Zm7,8.22h-9V13.39H10a6.61,6.61,0,0,0,.49,2.07Zm-9-5.15h9.37a6.61,6.61,0,0,0-.5,2.07H1.16Zm11,8.22h-11V16.46h9.89a6.67,6.67,0,0,0,1.07,1.29Zm4.55,0a5.64,5.64,0,0,1-4.89-8.46.49.49,0,0,0,.05-.09,5.64,5.64,0,1,1,4.84,8.55Z" />
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <span>펀딩 관리</span>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
+              id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
+              xml:space="preserve">
+              <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
+            </svg>
+          </a>
+           <!-- 공양미 충전 내역 -->
            <a href="javascript:void(0)" class="sidebar__menu">
             <div class="sidebar__menu__name">
               <div>
@@ -189,7 +214,7 @@
                   </g>
                 </svg>
               </div>
-              <span>공양미 내역</span>
+              <span>공양미 충전 내역</span>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
               id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
@@ -197,6 +222,7 @@
               <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
             </svg>
           </a>
+          
            <!-- 후원요청 관리 -->
            <a href="javascript:void(0)" class="sidebar__menu">
             <div class="sidebar__menu__name">
@@ -239,7 +265,7 @@
               <polygon points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 " />
             </svg>
           </a>
-          <!-- 정보 공유 -->
+          <!-- 봉사 모집 관리 -->
           <a href="javascript:void(0)" class="sidebar__menu">
             <div class="sidebar__menu__name">
               <div>
@@ -254,7 +280,7 @@
                     d="M487,393.14H408.72V112.82a65.37,65.37,0,0,0-65.3-65.29H81.64a62.47,62.47,0,0,0-7.41.45,4.78,4.78,0,0,0-.53.06C42.44,52,19,79,19,112.82a6,6,0,0,0,6,6h96.16V399.18a65.37,65.37,0,0,0,65.29,65.29H427.75A65.36,65.36,0,0,0,493,399.18,6,6,0,0,0,487,393.14ZM75,60c29.45.12,43.88,22.68,45.93,46.77H31.31C33.76,81.8,51.36,63,75,60Zm58.26,339.16V112.82c0-23-8.78-41.9-23.31-53.23H343.42a53.29,53.29,0,0,1,53.23,53.23V393.14H247.14a6,6,0,0,0-6,6,53.28,53.28,0,0,1-53.22,53.23h-1.45A53.28,53.28,0,0,1,133.22,399.18Zm294.53,53.23H225.64a65.31,65.31,0,0,0,27.26-47.2H480.64A53.32,53.32,0,0,1,427.75,452.41Z" />
                 </svg>
               </div>
-              <span>정보 공유 관리</span>
+              <span>봉사 모집 관리</span>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="512px"
               id="Layer_1" style="enable-background: new 0 0 512 512" version="1.1" viewBox="0 0 512 512" width="512px"
@@ -321,33 +347,6 @@
                   <a href="">0</a>
                 </div>
               </li>
-              <li class="status-list-item">
-                <div class="status-item-wrapper">
-                  <div class="problem-icon-wrapper">
-                    <div class="problem-icon">
-                      <div>
-                        <div>
-                          <span>
-                            <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
-                              <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
-                              <path
-                                d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
-                                fill="#11CA2D"></path>
-                              <path d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
-                                fill="#11CA2D"></path>
-                            </svg>
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="status-item-name">탈퇴 회원수</div>
-                </div>
-                <div class="status-item-count">
-                  <a href="">0</a>
-                </div>
-              </li>
               <div class="clock">
                 <h2>현재시간</h2>
                 <h1></h1>
@@ -405,8 +404,8 @@
                   </label>
                 </td>
                 <td class="content__id">1</td>
-                <td>kmg2331</td>
-                <td>kmg2331@gmail.com</td>
+                <td>hjh1994</td>
+                <td>jh940412@gmail.com</td>
                 <td>2023-01-01</td>
                 <td>남</td>
                 <td>
@@ -421,7 +420,58 @@
                     <input type="checkbox" name="check" />
                   </label>
                 </td>
-                <td class="content__id">1</td>
+                <td class="content__id">2</td>
+                <td>hjh1994</td>
+                <td>jh940412@gmail.com</td>
+                <td>2023-01-01</td>
+                <td>남</td>
+                <td>
+                  <button class="content__detail__btn button__type_2 button__color__green">
+                    상세보기
+                  </button>
+                </td>
+              </tr>
+              <tr class="table__content">
+                <td>
+                  <label class="check-label">
+                    <input type="checkbox" name="check" />
+                  </label>
+                </td>
+                <td class="content__id">3</td>
+                <td>hjh1994</td>
+                <td>jh940412@gmail.com</td>
+                <td>2023-01-01</td>
+                <td>남</td>
+                <td>
+                  <button class="content__detail__btn button__type_2 button__color__green">
+                    상세보기
+                  </button>
+                </td>
+              </tr>
+              <tr class="table__content">
+                <td>
+                  <label class="check-label">
+                    <input type="checkbox" name="check" />
+                  </label>
+                </td>
+                <td class="content__id">4</td>
+                <td>hjh1994</td>
+                <td>jh940412@gmail.com</td>
+                <td>2023-01-01</td>
+                <td>남</td>
+                <td>
+                  <button class="content__detail__btn button__type_2 button__color__green">
+                    상세보기
+                  </button>
+                </td>
+              </tr>
+              <tr class="table__content">
+                <td>
+                  <label class="check-label">
+                    <input type="checkbox" name="check" />
+                  </label>
+                </td>
+                <td class="content__id">5</td>
                 <td>kmg2331</td>
                 <td>kmg2331@gmail.com</td>
                 <td>2023-01-01</td>
@@ -434,17 +484,25 @@
               </tr>
             </table>
             <!-- default.css > pagenation -->
-            <div class="pagenation">
-              <a href="javascript:void(0)">1</a>
-              <a href="javascript:void(0)">2</a>
-              <a href="javascript:void(0)">3</a>
-            </div>
+            <div>
+              <div class="paging" style="text-align: center">
+                <a class="changePage" style="color: black"><code><</code></a>
+                <code id="currentPage">1</code>
+                  <a class="changePage" style="color: black"}"><code>2</code></a>
+                <a class="changePage"style="color: black"><code>></code></a>
+              </div>
+              <form name="pageForm">
+                <input type="hidden">
+                <input type="hidden">
+              </form>
+          </div>
           </div>
         </div>
       </main>
     </section>
     <!-- 모달창 들어가야할 곳 -->
     <!-- 추후 타임리프로 불러와야 함 -->
+
     <div id="confirm-modal" style="display: none;">
       <div class="modal-content">
         <div class="modal-header">
@@ -460,6 +518,8 @@
         </div>
       </div>
     </div>
+
+    <!-- 상세보기 모달창 -->
     <section class="modal-stage" style="display: none">
       <section class="modal">
         <div class="modal__header">
@@ -474,11 +534,38 @@
         <form class="storage_form" action="">
           <main class="modal__main">
             <div class="modal__profile__top">
-              <h4>수정가능</h4>
+              <h4>수정 불가</h4>
               <div class="user__profile">
                 <h5>아이디</h5>
                 <div class="user__profile__input">
                   <input type="text" name="" value="example1234" />
+                </div>
+              </div>
+              <div class="user__profile">
+                <h5>가입일</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="2023-01-01" readonly="true" />
+                </div>
+              </div>
+              <div class="user__profile">
+                <h5>공양미 갯수</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="3000개" readonly="true" />
+                </div>
+              </div>
+            </div>
+            <div class="modal__profile__bottom">
+              <h4>수정 가능</h4>
+              <div class="user__profile">
+                <h5>이름</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="홍길동" readonly="true" />
+                </div>
+              </div>
+              <div class="user__profile">
+                <h5>성별</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="성별" readonly="true" />
                 </div>
               </div>
               <div class="user__profile">
@@ -493,27 +580,8 @@
                   <input type="text" name="" value="01012341234" />
                 </div>
               </div>
-            </div>
-            <div class="modal__profile__bottom">
-              <h4>수정 불가능</h4>
-              <div class="user__profile">
-                <h5>이름</h5>
-                <div class="user__profile__input">
-                  <input type="text" name="" value="홍길동" readonly="true" />
-                </div>
-              </div>
-              <div class="user__profile">
-                <h5>가입일</h5>
-                <div class="user__profile__input">
-                  <input type="text" name="" value="2023-01-01" readonly="true" />
-                </div>
-              </div>
-              <div class="user__profile">
-                <h5>성별</h5>
-                <div class="user__profile__input">
-                  <input type="text" name="" value="성별" readonly="true" />
-                </div>
-              </div>
+              
+              
             </div>
             <div class="user__profile__button">
               <button id="completeBtn" class="button__type_2 button__color__green">
@@ -524,6 +592,7 @@
         </form>
       </section>
     </section>
+    <!-- 상세보기 모달 end -->
   </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
