--- a/src/main/resources/static/css/community/service-board.css
+++ b/src/main/resources/static/css/community/service-board.css
@@ -1,16 +1,54 @@
-.benner-container{
+body{
+    background: #545454!important;
+    height: 100%;
+    overflow-x: hidden;
+    padding: 0!important;
+    min-height: 100%;
+    -webkit-font-smoothing: subpixel-antialiased;
+    word-break: keep-all;
+    word-wrap: break-word;
+    margin: 0;
+    min-width: 320px;
+    font-size: 14px;
+}
+
+*{
+    box-sizing: inherit;
+}
+
+div{
+    display: block;
+}
+
+.main{
     background-color: #fff;
     position: relative;
     overflow: hidden;
     min-height: 100%;
     z-index: 2;
+    transition: transform .5s ease,-webkit-transform .5s ease;
+    backface-visibility: hidden;
+    padding-top: 30px;
 }
 .board-benner{
     padding: 0;
     border-bottom: none;
+    text-align: center;
+    margin: 0;
+    background: none;
+    border-radius: 0;
+    box-shadow: none;
+    border: none;
+    font-size: 16px;
+    position: relative;
+    font-weight: 400;
+    line-height: 1.28571429em;
+    text-transform: none;
+    color: #28323c;
 }
 .benner-cover{
-    height: 140px;
+    background-image: url(https://media.rocketpunch.com/company/395/tumblbug_cover_1650001824.png);
+    height: 200px;
     position: relative;
     width: 100%;
     background-repeat: no-repeat;
@@ -18,23 +56,43 @@
     background-position: 50% 50%;
     overflow: hidden;
 }
-.benner-content{
-    position: relative;
-    margin-top: -47px;
-    width: 100%;
-}
+
 .main-container{
-    padding: 24px 0 3rem;
     margin: 24%;
     margin-top: 1%;
     margin-bottom: 3%;
+
+    padding: 24px 0 0rem;
+    max-width: 980px!important;
+    line-height: 1.5;
+    font-size: 1rem;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    flex-wrap: wrap;
+    -webkit-box-align: stretch;
+    align-items: stretch;
 }
+
+@media only screen and (min-width: 992px) and (max-width: 1099px){
+    .main-container{
+        width: 953px!important;
+        margin-left: auto!important;
+        margin-right: auto!important;
+    }
+}
+
 .row{
-    padding: 3rem 0 0;
     display: block;
     margin-top: 0;
     margin-bottom: 0;
     position: relative;
+    width: 100%!important;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-box-pack: inherit;
+    -webkit-box-align: stretch;
     width: 100%!important;
 }
 .row-container{
@@ -43,6 +101,7 @@
     text-align: center;
     margin-bottom: 0;
     margin-top: 0;
+    font-size: 1rem;
     position: relative;
     box-shadow: none;
     margin: 1rem 0;
@@ -53,26 +112,54 @@
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 4px;
+    margin-top: 0;
+    min-height: 1rem
 }
+
+h1, h2, h3, h4, h5 {
+    line-height: 1.28571429em;
+    margin: 1rem 0;
+    font-weight: 400;
+    padding: 0;
+}
+
 .service-info{
-    padding: 3rem 0 0;
+    padding: 1rem 0 0;
     display: block;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: relative;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-box-pack: inherit;
+    -webkit-box-align: stretch;
     width: 100%!important;
 }
 .service-header{
     margin-top: -0.14285714em;
     margin-bottom: 0;
     display: inline-block;
+    font-size: 16px;
+    border: none;
+    margin: 1rem 0;
+    padding: 0;
+    font-weight: 400;
+    line-height: 1.28571429em;
+    text-transform: none;
+    color: #28323c;
 }
-.service-header-text{
+a{
     margin: 0;
     padding: 0;
     border: 0;
     font: inherit;
     vertical-align: baseline;
+    background-color: transparent;
+    cursor: pointer;
     text-decoration: none;
     color: #28323c;
 }
+
 .service-items{
     margin: 1.5em 0;
     font-size: 1rem;
@@ -80,12 +167,15 @@
     background: #fff;
     box-shadow: none;
     padding: 16px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border-radius: 0.28571429rem;
     border: 1px solid #d9dfeb;
 }
 .service-items-wrapper{
     margin-bottom: 0;
     margin-top: 0;
+    font-size: 1em;
     display: flex;
     margin: 1em 0;
     width: 100%;
@@ -110,15 +200,13 @@
     font-size: 1em;
     border: none;
     border-radius: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .name{
-    font-size: 10px;
+    font-size: 12px;
     margin-bottom: 4px;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
 }
 .title{
     font-size: 16px;
@@ -133,51 +221,18 @@
     font-size: 12px;
     line-height: 1.5;
     margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
 }
-.dates-text{
-    font-size: 1em;
-    opacity: 1;
-    margin: 0 9px 0 0;
-    width: 1.18em;
-    height: 1em;
-    font-style: normal;
-    font-weight: 400;
-    text-align: center;
-    speak: none;
-}
-.service-dates{
-    color: #6e7980;
-    font-size: 12px;
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-}
+
 .items-buttons{
     -webkit-box-flex: 0;
     flex: 0 0 auto;
     margin-left: 10px;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
 }
 .gather{
     display: inline-block;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
 }
 .gather-button{
+    cursor: pointer;
     background: #fff!important;
     color: #28323c!important;
     font-weight: 400;
@@ -191,13 +246,17 @@
     outline: 0;
     border: none;
     vertical-align: baseline;
+    margin: 0 0.25em 0 0;
     padding: 0.92857143em 1.5em;
     line-height: 1em;
     font-style: normal;
     text-align: center;
+    user-select: none;
+    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
 }
 .button{
     cursor: pointer;
+    box-shadow: inset 0 0 0 0 #d9dfeb;
     background-color: #4e61ff;
     color: #fff;
     text-shadow: none;
@@ -216,9 +275,10 @@
     font-style: normal;
     text-align: center;
     border-radius: 0.28571429rem;
+    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
 }
 .service-help{
-    padding-top: 10px;
     font-size: 12px;
     text-align: center;
+    padding-bottom: 30px;
 }
