--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -222,6 +222,91 @@ h3, p, div {
     margin-top: 5px;
 }
 
+.my-user-wrapper{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 50px;
+    right: 0px;
+    width: 240px;
+    transition: all 0.3s ease-in-out 0s;
+    border: 1px solid rgb(228, 228, 228);
+    box-sizing: border-box;
+    border-radius: 4px;
+    z-index: 1200;
+}
+
+.my-user-wrapper::before{
+    position: absolute;
+    top: -5px;
+    right: 35px;
+    width: 8px;
+    height: 8px;
+    background-color: rgb(255, 255, 255);
+    content: " ";
+    transform: rotate(45deg);
+    border-top: 1px solid rgb(228, 228, 228);
+    border-left: 1px solid rgb(228, 228, 228);
+    z-index: 1002;
+}
+
+.user-menu-list{
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 16px 0px;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    background: rgb(255, 255, 255);
+    box-sizing: border-box;
+    border-radius: 4px;
+    user-select: none;
+    z-index: 1001;
+}
+
+.menu-item{
+    padding: 4px 16px;
+    display: flex;
+    width: 100%;
+    height: 46px;
+    min-height: 46px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    font-size: 14px;
+    line-height: 22px;
+    color: rgb(13, 13, 13);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.menu-item-divider{
+    padding: 12px 16px;
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background: rgb(255, 255, 255);
+}
+
+.menu-item-divider::before{
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background: rgb(240, 240, 240);
+    content: " ";
+}
+
+
+.user-dimmed-layout{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    bottom: 0px;
+    z-index: 1000;
+}
+
 svg:not(:root) {
     overflow: hidden;
 }
@@ -272,6 +357,104 @@ svg:not(:root) {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 6px 7px;
 }
 
+.extended-category-section-start{
+    overflow: hidden;
+    margin-top: 56px;
+    position: absolute;
+    display: flex;
+    height: auto;
+    max-height: 600px;
+    transition: max-height 0.3s ease-in-out 0s;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-direction: column;
+    background: rgb(255, 255, 255);
+    z-index: -999;
+    user-select: none;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 6px 7px;
+}
+
+.extended-categeory-header{
+    display: none;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    height: 60px;
+    padding: 0px 16px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.category-container{
+    position: relative;
+    width: 100%;
+    max-width: 1160px;
+}
+
+.style-depth-category-wrapper{
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    padding: 40px 0px 30px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+}
+
+.depth-category-group{
+    flex: 1 0 20%;
+}
+
+.depth-category{
+    display: flex;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+    flex-shrink: 0;
+    height: 32px;
+    margin-bottom: 20px;
+    padding: 0px 3px;
+    cursor: pointer;
+}
+
+.depth-category-icon{
+    overflow: hidden;
+    display: inline-flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    width: 40px;
+    height: 40px;
+    margin-right: 4px;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.depth-category-text{
+    margin-top: 4px;
+    display: inline-flex;
+    width: 100%;
+    line-height: 18px;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: rgb(61, 61, 61);
+    font-size: 13px;
+    word-break: keep-all;
+    text-align: left;
+}
+
+.depth-category.depth-category-text {
+    font-weight: bold;
+    color: rgb(13, 13, 13);
+}
+
 .search-input-wrapper{
     position: relative;
     padding: 0px 30px 0px 16px;
@@ -318,6 +501,10 @@ svg:not(:root) {
     cursor: pointer;
     flex-shrink: 0;
     transition: all 0.2s ease-in-out 0s;
+}
+
+.category-wrapper:hover{
+    font-weight: bold;
 }
 
 .category-select::after{
@@ -428,5 +615,13 @@ svg:not(:root) {
 @media (min-width: 640px) {
     .extended-category-section {
         width: calc(100% + 40px);
+    }
+    .extended-category-section-start{
+        width: calc(100% + 40px);
+    }
+    .my-user-wrapper{
+        min-height: 380px;
+        max-height: 85vh;
+        overflow-y: auto;
     }
 }
