--- a/src/main/resources/templates/customerCetner/notice.html
+++ b/src/main/resources/templates/customerCetner/notice.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항 | 텀블벅 - 크리에이터를 위한 크라우드펀딩</title>
     <link rel="stylesheet" href="/static/css/main/header.css">
-    <link rel="stylesheet" href="/static/css/customerCenter/notice.css">
+    <link rel="stylesheet" href="../../static/css/customerCenter/notice.css">
     <link rel="stylesheet" href="/static/css/font/font.css">
 
 </head>
@@ -35,9 +35,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -47,9 +47,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -59,9 +59,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -71,9 +71,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -83,9 +83,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -95,9 +95,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="list-li">
@@ -107,9 +107,9 @@
                                         <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="list-date">2023-04-13</span>
                                     </span>
-                                    <div class="list-img">
+                                    <!-- <div class="list-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                         </ul>
@@ -177,6 +177,7 @@
 /* 외부 html 파일 불러오기 */
 const header = document.querySelector('header');
 const footer = document.querySelector('footer');
+
 
 fetch('/templates/main/header.html')
 .then(res => res.text())
