공지사항 검색 수정

--- a/src/main/resources/templates/customerCetner/search.html
+++ b/src/main/resources/templates/customerCetner/search.html
@@ -35,9 +35,9 @@
                                         <span class="search-title">[텀블벅] <em class="keyword">마감</em>이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="notice-date">2023-04-13</span>
                                     </span>
-                                    <div class="notice-search-img">
+                                   <!--  <div class="notice-search-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="">
@@ -47,9 +47,9 @@
                                         <span class="search-title">[텀블벅] <em class="keyword">마감</em>이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="notice-date">2023-04-13</span>
                                     </span>
-                                    <div class="notice-search-img">
+                                    <!-- <div class="notice-search-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             <li class="">
@@ -59,9 +59,9 @@
                                         <span class="search-title">[텀블벅] <em class="keyword">마감</em>이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
                                         <span class="notice-date">2023-04-13</span>
                                     </span>
-                                    <div class="notice-search-img">
+                                    <!-- div class="notice-search-img">
                                         <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div>
+                                    </div> -->
                                 </a>
                             </li>
                             
