--- a/src/main/resources/templates/mypage/withdraw-login.html
+++ b/src/main/resources/templates/mypage/withdraw-login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/mypage/withdraw-login.css">
     <link rel="stylesheet" href="../../static/css/main/footer.css">
