--- a/src/main/resources/static/css/customerCenter/notice.css
+++ b/src/main/resources/static/css/customerCenter/notice.css
@@ -29,7 +29,7 @@ li {
 
 .common {
     font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
-    font-size: 14px;
+    font-size: 36px;
     line-height: 24px;
     letter-spacing: -0.015em;
     font-weight: 300;
@@ -45,13 +45,13 @@ li {
 /* 가로 해상도가 1200px 보다 작은 큰화면에 적용) */
 @media only screen and (min-width: 1200px) {
 .notice-title  {
-    max-width: 1160px !important;
+    max-width: 900px !important;
     }
 }
 
 @media only screen and (min-width: 1080px) {
     .notice-title  {
-        max-width: 1080px;
+        max-width: 900px;
         margin: 0px auto;
     }
 }
@@ -84,6 +84,7 @@ li {
 @media only screen and (min-width: 1080px) {
 .list-con .notice-list-wrapper {
         border: 1px solid rgb(230, 230, 230);
+        border-bottom: none;
     }
 }
 
@@ -130,8 +131,8 @@ li {
 
 .list-ul li {
     display: flex;
-    /* min-height: 103px;
-    padding: 16px; */
+    min-height: 103px;
+    padding: 16px;
     border-bottom: 1px solid rgb(230, 230, 230);
 }
 
